tests/snapshots/formatting_snapshot_tests__formatting_snapshots@block_closer_keep.cmake.snap
---
source: tests/formatting_snapshot_tests.rs
expression: output
input_file: tests/format_fixtures/block_closer_keep.cmake
---
# Keep mode: preserve arguments as-is
if(WIN32)
	set(PLATFORM windows)
else()
	set(PLATFORM unix)
endif()

foreach(item ${LIST})
	message(${item})
endforeach()

function(my_func ARG1 ARG2)
	message(${ARG1})
endfunction()

macro(my_macro X Y)
	set(${X} ${Y})
endmacro()

while(${COUNTER} LESS 10)
	math(EXPR COUNTER "${COUNTER} + 1")
endwhile()

# Empty closers should also be preserved
if(UNIX)
	set(A b)
endif()

# Nested blocks
if(WIN32)
	if(MSVC)
		set(COMPILER msvc)
	endif()
endif()
