tests/snapshots/formatting_snapshot_tests__formatting_snapshots@edge_cases_format.cmake.snap
---
source: tests/formatting_snapshot_tests.rs
expression: output
input_file: tests/format_fixtures/edge_cases_format.cmake
---
message()
message()
set(A)
set()
add_executable(app)
message(${A} ${B} $<CONFIG:Debug> "quoted")
set(HELP [[
Usage: myapp [options]
  --help     Show help
]])
message([=[contains ]] brackets]=])
set(LIST_VAR "a;b;c")
message("line1\nline2\ttab")
