tests/snapshots/formatting_snapshot_tests__formatting_snapshots@keyword_commands.cmake.snap
---
source: tests/formatting_snapshot_tests.rs
expression: output
input_file: tests/format_fixtures/keyword_commands.cmake
---
target_link_libraries(
  myapp
  PUBLIC
    fmt::fmt
    spdlog::spdlog
  PRIVATE
    Threads::Threads
    Boost::filesystem
)
target_include_directories(
  mylib
  PUBLIC
    ${CMAKE_CURRENT_SOURCE_DIR}
    /include
    ${CMAKE_CURRENT_SOURCE_DIR}
    /include2
  PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}
    /src
)
target_compile_definitions(
  myapp
  PRIVATE
    $<$<CONFIG:Debug>:DEBUG_MODE>
  PUBLIC
    VERSION=
    "${PROJECT_VERSION}"
)
target_sources(
  mylib
  PRIVATE
    src/a.cpp
    src/b.cpp
    src/c.cpp
  PUBLIC
    include/mylib/header.h
    include/mylib/types.h
)
add_library(mylib STATIC src/core.cpp src/utils.cpp src/parser.cpp)
install(
  
  TARGETS
    mylib
  ARCHIVE
  DESTINATION
    lib
  LIBRARY
  DESTINATION
    lib
  RUNTIME
  DESTINATION
    bin
)
target_link_libraries(small PRIVATE lib1)
