tests/snapshots/formatting_snapshot_tests__formatting_snapshots@nested_scopes.cmake.snap
---
source: tests/formatting_snapshot_tests.rs
expression: output
input_file: tests/format_fixtures/nested_scopes.cmake
---
cmake_minimum_required(VERSION 3.20
)
project(Nested
)

if(WIN32)
	set(PLATFORM windows)
	if(MSVC)
		set(COMPILER msvc)
		target_compile_options(myapp
			PRIVATE
				/W4
		)
	else()
		set(COMPILER other)
	endif()
elseif(APPLE)
	set(PLATFORM macos)
else()
	set(PLATFORM linux)
endif()

foreach(item ${LIST})
	message(STATUS "Processing: ${item}")
endforeach()

function(my_function ARG1 ARG2)
	message(STATUS "ARG1=${ARG1}")
	message(STATUS "ARG2=${ARG2}")
	if(ARG1)
		set(RESULT "yes" PARENT_SCOPE)
	endif()
endfunction()

macro(my_macro ARG)
	set(${ARG}_FOUND TRUE)
endmacro()

while(CONDITION)
	math(EXPR counter "${counter} + 1")
endwhile()
