tests/snapshots/formatting_snapshot_tests__formatting_snapshots@real_world_full.cmake.snap
---
source: tests/formatting_snapshot_tests.rs
expression: output
input_file: tests/format_fixtures/real_world_full.cmake
---
cmake_minimum_required(VERSION 3.20)
project(RealWorld VERSION 1.2.3 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Platform-specific sources
if(WIN32)
	set(PLATFORM_SOURCES
		src/platform/windows.cpp
		src/platform/windows_utils.cpp
	)
elseif(APPLE)
	set(PLATFORM_SOURCES
		src/platform/macos.cpp
	)
else()
	set(PLATFORM_SOURCES
		src/platform/linux.cpp
	)
endif()

# Main library
add_library(realworld STATIC
	src/core.cpp
	src/parser.cpp
	src/formatter.cpp
	${PLATFORM_SOURCES}
)

target_include_directories(realworld
	PUBLIC
		$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
		$<INSTALL_INTERFACE:include>
	PRIVATE
		${CMAKE_CURRENT_SOURCE_DIR}/src
)

target_compile_options(realworld
	PRIVATE
		$<$<CXX_COMPILER_ID:MSVC>:/W4 /WX>
		$<$<NOT:$<CXX_COMPILER_ID:MSVC>>:-Wall -Wextra -Wpedantic>
)

target_link_libraries(realworld PUBLIC fmt::fmt PRIVATE Threads::Threads)

# Install rules
install(
	TARGETS
		realworld
	ARCHIVE
	DESTINATION lib
	LIBRARY
	DESTINATION lib
	RUNTIME
	DESTINATION bin
)

install(DIRECTORY include/ DESTINATION include)
